[gd_scene load_steps=12 format=3 uid="uid://vs72j4mljes5"]

[ext_resource type="Script" uid="uid://bgog3l3jt8cfc" path="res://Assets/Scripts/LevelSelector.gd" id="1_j6vvw"]
[ext_resource type="Script" uid="uid://b0pt1ly3v1iry" path="res://Assets/Scripts/LevelCamera.gd" id="2_6jwxn"]
[ext_resource type="Script" uid="uid://db1lnab1efs5d" path="res://Assets/Scripts/UI/LevelUI.gd" id="3_qxdb1"]
[ext_resource type="Texture2D" uid="uid://wlu77osrcluu" path="res://Assets/Sprites/Rotate.png" id="4_ggqha"]
[ext_resource type="Texture2D" uid="uid://bi3p4l8t25wvh" path="res://Assets/Sprites/Configure.png" id="5_b6myp"]
[ext_resource type="Texture2D" uid="uid://dq6n3hy5lhj2h" path="res://Assets/Sprites/Destroy.png" id="6_r5kyp"]
[ext_resource type="Texture2D" uid="uid://c1tbn8gxymmf7" path="res://Assets/Sprites/Coin.png" id="7_xnpqu"]
[ext_resource type="Texture2D" uid="uid://8f8oqyk25hcp" path="res://Assets/Sprites/Lifes.png" id="8_uhh13"]
[ext_resource type="Texture2D" uid="uid://banh43vc7nu10" path="res://Assets/Sprites/Pause.png" id="9_4ymob"]

[sub_resource type="Environment" id="Environment_numvf"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_2rron"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_j6vvw")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.17364822, 0.9848077, 0, -0.9848077, 0.17364822, 0, 15, 0)
projection = 1
current = true
size = 30.0
near = 1.0
script = ExtResource("2_6jwxn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_numvf")
camera_attributes = SubResource("CameraAttributesPractical_2rron")

[node name="LevelUI" type="CanvasLayer" parent="."]
process_mode = 1
script = ExtResource("3_qxdb1")

[node name="TowerConfigurationPanel" type="Panel" parent="LevelUI"]
offset_left = 1030.0
offset_top = 725.0
offset_right = 1135.0
offset_bottom = 765.0

[node name="RotateButton" type="Button" parent="LevelUI/TowerConfigurationPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 32.0
offset_bottom = 31.0
focus_mode = 0
icon = ExtResource("4_ggqha")
expand_icon = true

[node name="ConfigureButton" type="Button" parent="LevelUI/TowerConfigurationPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 7.0
offset_right = 65.0
offset_bottom = 31.0
focus_mode = 0
icon = ExtResource("5_b6myp")
expand_icon = true

[node name="DestroyButton" type="Button" parent="LevelUI/TowerConfigurationPanel"]
layout_mode = 0
offset_left = 72.0
offset_top = 7.0
offset_right = 97.0
offset_bottom = 31.0
focus_mode = 0
icon = ExtResource("6_r5kyp")
expand_icon = true

[node name="TowerPlacementPanel" type="Panel" parent="LevelUI"]
offset_left = 1030.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="MinimizePanelButton" type="Button" parent="LevelUI/TowerPlacementPanel"]
layout_mode = 0
offset_left = -32.0
offset_top = 291.0
offset_bottom = 381.0
focus_mode = 0
text = "->"

[node name="PlaceTestTowerButton" type="Button" parent="LevelUI/TowerPlacementPanel"]
layout_mode = 0
offset_left = 49.0
offset_top = 22.0
offset_right = 212.0
offset_bottom = 58.0
focus_mode = 0
text = "Поставить башню"

[node name="Currency" type="Control" parent="LevelUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 90.0
offset_bottom = 85.0

[node name="TextureRect" type="TextureRect" parent="LevelUI/Currency"]
layout_mode = 0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("7_xnpqu")
expand_mode = 1

[node name="Label" type="Label" parent="LevelUI/Currency"]
layout_mode = 0
offset_left = 30.0
offset_top = 1.0
offset_right = 70.0
offset_bottom = 26.0
text = "100"

[node name="Health" type="Control" parent="LevelUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 100.0
offset_right = 90.0
offset_bottom = 125.0

[node name="TextureRect" type="TextureRect" parent="LevelUI/Health"]
layout_mode = 0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("8_uhh13")
expand_mode = 1

[node name="Label" type="Label" parent="LevelUI/Health"]
layout_mode = 0
offset_left = 30.0
offset_top = 1.0
offset_right = 70.0
offset_bottom = 26.0
text = "10"

[node name="PauseButton" type="Button" parent="LevelUI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
focus_mode = 0
icon = ExtResource("9_4ymob")
icon_alignment = 1
expand_icon = true

[node name="PauseMenu" type="Panel" parent="LevelUI"]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelUI/PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = 100.0
offset_right = 59.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Пауза"

[node name="VBoxContainer" type="VBoxContainer" parent="LevelUI/PauseMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 540.0
offset_top = 290.0
offset_right = 740.0
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ContinueButton" type="Button" parent="LevelUI/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Продолжить"

[node name="OptionsButton" type="Button" parent="LevelUI/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Настройки"

[node name="MainMenuButton" type="Button" parent="LevelUI/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Главное меню"

[connection signal="pressed" from="LevelUI/TowerConfigurationPanel/RotateButton" to="LevelUI" method="_on_rotate_button_pressed"]
[connection signal="pressed" from="LevelUI/TowerConfigurationPanel/ConfigureButton" to="LevelUI" method="_on_configure_button_pressed"]
[connection signal="pressed" from="LevelUI/TowerConfigurationPanel/DestroyButton" to="LevelUI" method="_on_destroy_button_pressed"]
[connection signal="pressed" from="LevelUI/TowerPlacementPanel/MinimizePanelButton" to="LevelUI" method="_on_minimize_panel_button_pressed"]
[connection signal="pressed" from="LevelUI/TowerPlacementPanel/PlaceTestTowerButton" to="LevelUI" method="_on_place_test_tower_button_pressed"]
[connection signal="pressed" from="LevelUI/PauseButton" to="LevelUI" method="_on_pause_button_pressed"]
[connection signal="pressed" from="LevelUI/PauseMenu/VBoxContainer/ContinueButton" to="LevelUI" method="_on_continue_button_pressed"]
[connection signal="pressed" from="LevelUI/PauseMenu/VBoxContainer/OptionsButton" to="LevelUI" method="_on_options_button_pressed"]
[connection signal="pressed" from="LevelUI/PauseMenu/VBoxContainer/MainMenuButton" to="LevelUI" method="_on_main_menu_button_pressed"]
